Forever added, Grunt file updated

--- a/public/modules/tasks/views/list-tasks.client.view.html
+++ b/public/modules/tasks/views/list-tasks.client.view.html
@@ -15,6 +15,6 @@
 		</a>
 	</div>
 	<div class="alert alert-warning text-center" data-ng-if="tasks.$resolved && !tasks.length">
-		No articles yet, why don't you <a href="/#!/tasks/create">create one</a>?
+		No Tasks yet, why don't you <a href="/#!/tasks/create">create one</a>?
 	</div>
 </section>
